src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Synced</description>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_By_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Processed By Future</description>
        <label>Processed By Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_By_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Processed By Queue</description>
        <label>Processed By Queue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>